adicionado formulario reativo

--- a/front-moments/src/app/components/header/header.component.html
+++ b/front-moments/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
 <p>header works!</p>
 <nav>
   <a class="brand" routerLink="/">
-    <img src="/assets/moments.png" alt="Moments" />
-    <h2>Moments</h2>
+    <img src="/assets/moments.png" alt="Moment" />
+    <h2>Moment</h2>
   </a>
   <ul class="links">
     <li><a routerLink="/">Home</a></li>
