--- a/front-moments/src/app/components/footer/footer.component.html
+++ b/front-moments/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
 <footer>
   <h3>Compartilhe seus melhores momentos</h3>
-  <p><span>Moments</span> &copy; 2024</p>
+  <p><span>Moment</span> &copy; 2024</p>
 </footer>
