--- a/front-moments/src/app/components/moment-form/moment-form.component.html
+++ b/front-moments/src/app/components/moment-form/moment-form.component.html
@@ -1,11 +1,25 @@
-<form>
+<form (ngSubmit)="submit()" [formGroup]="momentForm" #formDir="ngForm">
   <div class="form-group">
     <label for="title">Título:</label>
-    <input type="text" placeholder="Coloque um título" required/>
+    <input
+      type="text"
+      placeholder="Coloque um título"
+      formControlName="title"
+      required/>
+    <div *ngIf="title.invalid && formDir.submitted" class="validation-error">
+      <p *ngIf="title.errors?.['required']">
+        O titulo é obrigatorio
+      </p>
+    </div>
   </div>
   <div class="form-group">
     <label for="description">Descrição:</label>
-    <textarea placeholder="O uqe aconteceu lá?" required></textarea>
+    <textarea placeholder="O uqe aconteceu lá?" formControlName="description" required></textarea>
+    <div *ngIf="description.invalid && formDir.submitted" class="validation-error">
+      <p *ngIf="description.errors?.['required']">
+        A descrição é obrigatorio
+      </p>
+    </div>
   </div>
   <div class="form-group">
     <label for="image">Coloque a foto que mais marcou?:</label>
