--- a/front-moments/src/styles.css
+++ b/front-moments/src/styles.css
@@ -50,3 +50,10 @@ input[type="submit"]:hover{
   background-color: transparent;
 
 }
+
+.validation-error p{
+  color: #DC3535;
+  margin-top: .4em;
+  border-left: 3px solid #DC3535;
+  padding-left: 0.2em;
+}
