--- a/front-moments/src/app/components/moment-form/moment-form.component.html
+++ b/front-moments/src/app/components/moment-form/moment-form.component.html
@@ -14,7 +14,7 @@
   </div>
   <div class="form-group">
     <label for="description">Descrição:</label>
-    <textarea placeholder="O uqe aconteceu lá?" formControlName="description" required></textarea>
+    <textarea placeholder="O que aconteceu lá?" formControlName="description" required></textarea>
     <div *ngIf="description.invalid && formDir.submitted" class="validation-error">
       <p *ngIf="description.errors?.['required']">
         A descrição é obrigatorio
@@ -23,7 +23,7 @@
   </div>
   <div class="form-group">
     <label for="image">Coloque a foto que mais marcou?:</label>
-    <input type="file">
+    <input type="file" (change)="onFileSelected($event)">
   </div>
   <input type="submit" value="{{ btnText }}">
 </form>
