--- a/front-moments/src/app/components/pages/about/about.component.html
+++ b/front-moments/src/app/components/pages/about/about.component.html
@@ -1,1 +1,5 @@
-<p>about works!</p>
+<div class="about">
+  <h2>Sobre o Moments</h2>
+  <p>Compartilhe seus momentos, e receba comentários de quem vocẽ gosta!</p>
+  <a routerLink="/moments/new">Quero compartilhar meu Momento!</a>
+</div>
