adicionado recuperar imagem

--- a/front-moments/src/app/components/pages/home/home.component.html
+++ b/front-moments/src/app/components/pages/home/home.component.html
@@ -1,6 +1,19 @@
 <div class="home-container">
   <h1>Veja o que estão compartillhando</h1>
-  <div *ngFor="let moment of moments">
-    <h2>{{ moment.title }}</h2>
-  </div>
+  @if (moments.length > 0) {
+    <div class="moments-container">
+      <div class="moment" *ngFor="let moment of moments">
+        <img [src]="exibirImagem(moment.image)"
+             alt="{{moment.title}}"/>
+        <h3>{{ moment.title }}</h3>
+        <p class="date">Em: {{ moment.created_at }}</p>
+        <p>Comentários: {{ moment.comments!.length }}</p>
+        <p><a routerLink="moments/{{moment.id}}">Detalhes</a></p>
+      </div>
+    </div>
+  } @else {
+    <div>
+      <h2>Não há momentos cadastrados</h2>
+    </div>
+  }
 </div>
